--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "remixicon": "^2.5.0",
+    "remixicon-react": "^1.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
